--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-8.72MB/s(Youtube:不良林), server: hz.bgp.rx.naiun.pw, port: 45240, type: ss, cipher: chacha20-ietf-poly1305, password: 8b460b5c-22cc-463b-b50a-44cf63bdca08}
-  - {name: 🇨🇳 中国-839.5KB/s(Youtube:不良林), server: gz.bgp.rx.naiun.pw, port: 45413, type: vmess, uuid: 8b460b5c-22cc-463b-b50a-44cf63bdca08, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: gz.bgp.rx.naiun.pw}}
-  - {name: 🇨🇳 中国-804.8KB/s(Youtube:不良林), server: gz.bgp.rx.naiun.pw, port: 45183, type: ss, cipher: chacha20-ietf-poly1305, password: 8b460b5c-22cc-463b-b50a-44cf63bdca08}
-  - {name: 🇯🇵 日本-2.25MB/s(Youtube:不良林), server: 52.253.119.192, port: 8313, type: ss, cipher: chacha20-ietf-poly1305, password: ljqdalu13..}
-  - {name: 波兰-199.7KB/s(Youtube:不良林), server: 217.30.10.63, port: 9024, type: ss, cipher: aes-256-cfb, password: BejrQvtu9sqUeNuZ}
-  - {name: 🇨🇳 中国-9.95MB/s(Youtube:不良林), server: hz.bgp.rx.naiun.pw, port: 45183, type: ss, cipher: chacha20-ietf-poly1305, password: 8b460b5c-22cc-463b-b50a-44cf63bdca08}
-  - {name: 🇨🇳 中国-11.26MB/s(Youtube:不良林), server: hz.bgp.rx.naiun.pw, port: 45250, type: vmess, uuid: 8b460b5c-22cc-463b-b50a-44cf63bdca08, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: hz.bgp.rx.naiun.pw}}
-  - {name: 🇨🇳 中国-10.65MB/s(Youtube:不良林), server: hz.bgp.rx.naiun.pw, port: 45184, type: vmess, uuid: 8b460b5c-22cc-463b-b50a-44cf63bdca08, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: hz.bgp.rx.naiun.pw}}
-  - {name: 🇨🇳 中国-1.99MB/s(Youtube:不良林), server: hz.bgp.rx.naiun.pw, port: 45413, type: vmess, uuid: 8b460b5c-22cc-463b-b50a-44cf63bdca08, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: hz.bgp.rx.naiun.pw}}
-  - {name: 🇨🇳 中国-3.43MB/s(Youtube:不良林), server: hz.bgp.rx.naiun.pw, port: 45394, type: vmess, uuid: 8b460b5c-22cc-463b-b50a-44cf63bdca08, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: hz.bgp.rx.naiun.pw}}
+  - {name: 波兰-350.3KB/s(Youtube:不良林), server: 217.30.10.64, port: 9084, type: ss, cipher: aes-256-cfb, password: c3NtHJ5ujV2tGDfj}
+  - {name: 🇺🇸 美国-4.08MB/s(Youtube:不良林), server: fhcarm2.gaox.ml, port: 443, type: trojan, password: f39bd244-f5fe-415c-8b98-a1e5250bf178, sni: fhcarm2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-3.83MB/s(Youtube:不良林), server: 426hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 426hk.fans8.xyz}}
+  - {name: 乌克兰-513.5KB/s(Youtube:不良林), server: 422wkl.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 422wkl.fans8.xyz}}
+  - {name: 波兰-956.9KB/s(Youtube:不良林), server: 217.30.10.63, port: 9053, type: ss, cipher: aes-256-cfb, password: SBM7R883jBmnqe6C}
+  - {name: 🇨🇳 中国-401.0KB/s(Youtube:不良林), server: zzcm09.bdate.xyz, port: 1980, type: vmess, uuid: b9ecdb44-236b-30a7-94f2-f464993d84cf, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: zzcm09.bdate.xyz}}
+  - {name: 🇬🇧 英国-1.73MB/s(Youtube:不良林), server: jgwld2.gaox.ml, port: 443, type: trojan, password: d7fd8aaa-4581-4281-80aa-4b63e5e1f157, sni: jgwld2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-3.14MB/s(Youtube:不良林), server: 213.183.53.177, port: 9084, type: ss, cipher: aes-256-cfb, password: c3NtHJ5ujV2tGDfj}
+  - {name: 🇳🇱 荷兰-903.0KB/s(Youtube:不良林), server: 213.183.59.214, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
+  - {name: 🇬🇧 英国-2.96MB/s(Youtube:不良林), server: 104.128.190.115, port: 44771, type: vmess, uuid: a4aa83d4-db1c-42a6-844d-135d6635b463, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-839.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-804.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.25MB/s(Youtube:不良林)
-      - 波兰-199.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
+      - 波兰-350.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.83MB/s(Youtube:不良林)
+      - 乌克兰-513.5KB/s(Youtube:不良林)
+      - 波兰-956.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-401.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.73MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.14MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-903.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.96MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-8.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-839.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-804.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.25MB/s(Youtube:不良林)
-      - 波兰-199.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
+      - 波兰-350.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.83MB/s(Youtube:不良林)
+      - 乌克兰-513.5KB/s(Youtube:不良林)
+      - 波兰-956.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-401.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.73MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.14MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-903.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.96MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-839.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-804.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.25MB/s(Youtube:不良林)
-      - 波兰-199.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
+      - 波兰-350.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.83MB/s(Youtube:不良林)
+      - 乌克兰-513.5KB/s(Youtube:不良林)
+      - 波兰-956.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-401.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.73MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.14MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-903.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.96MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-3.83MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-8.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-839.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-804.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.25MB/s(Youtube:不良林)
-      - 波兰-199.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
+      - 波兰-350.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.83MB/s(Youtube:不良林)
+      - 乌克兰-513.5KB/s(Youtube:不良林)
+      - 波兰-956.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-401.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.73MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.14MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-903.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.96MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-839.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-804.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.25MB/s(Youtube:不良林)
-      - 波兰-199.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
+      - 波兰-350.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.83MB/s(Youtube:不良林)
+      - 乌克兰-513.5KB/s(Youtube:不良林)
+      - 波兰-956.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-401.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.73MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.14MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-903.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.96MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-8.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-839.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-804.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.25MB/s(Youtube:不良林)
-      - 波兰-199.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
+      - 波兰-350.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.83MB/s(Youtube:不良林)
+      - 乌克兰-513.5KB/s(Youtube:不良林)
+      - 波兰-956.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-401.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.73MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.14MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-903.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.96MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-8.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-839.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-804.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.25MB/s(Youtube:不良林)
-      - 波兰-199.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
+      - 波兰-350.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.83MB/s(Youtube:不良林)
+      - 乌克兰-513.5KB/s(Youtube:不良林)
+      - 波兰-956.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-401.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.73MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.14MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-903.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.96MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
