--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 波兰-208.5KB/s(Youtube:不良林), server: 217.30.10.64, port: 9088, type: ss, cipher: aes-256-cfb, password: f8npKgNzdkss2ytn}
-  - {name: 乌克兰-3.19MB/s(Youtube:不良林), server: 422wkl.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 422wkl.fans8.xyz}}
-  - {name: 🇷🇺 俄罗斯联邦-2.79MB/s(Youtube:不良林), server: 195.245.239.170, port: 25442, type: vmess, uuid: d90d1d50-0beb-4988-a372-ed9ced3f9953, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.245.239.170}}
-  - {name: 波兰-659.8KB/s(Youtube:不良林), server: 217.30.10.64, port: 9027, type: ss, cipher: aes-256-cfb, password: EXN3S3eQpjE7EJu8}
-  - {name: 波兰-935.5KB/s(Youtube:不良林), server: 217.30.10.64, port: 9046, type: ss, cipher: aes-256-cfb, password: NvS8N4Vf8qAGPSCL}
-  - {name: 🇮🇳 印度-3.07MB/s(Youtube:不良林), server: jgwhdlb1.gaox.ml, port: 443, type: trojan, password: e05c749b-7c6b-41b8-9c71-9dcf685edf4a, sni: jgwhdlb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.68MB/s(Youtube:不良林), server: 107.173.148.4, port: 29101, type: vmess, uuid: d9b33a06-a185-402d-e8f5-f1983f57a9b1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 107.173.148.4}}
+  - {name: 🇦🇺 澳大利亚-2.25MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
+  - {name: 波兰-1.18MB/s(Youtube:不良林), server: 217.30.10.64, port: 9093, type: ss, cipher: aes-256-cfb, password: wfLC2y7rzZyCmuyt}
+  - {name: 🇨🇳 中国-340.1KB/s(Youtube:不良林), server: ingress-i2.onebox6.org, port: 38101, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i2.onebox6.org}}
+  - {name: 波兰-513.8KB/s(Youtube:不良林), server: 217.30.10.64, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
+  - {name: 🇺🇸 美国-281.0KB/s(Youtube:不良林), server: living.starspace.link, port: 443, type: trojan, password: NNhSlVRhte1Vzw5D, sni: living.starspace.link, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.22MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
   - {name: 🇮🇳 印度-613.5KB/s(Youtube:不良林), server: jgwhdlb3.gaox.ml, port: 443, type: trojan, password: 006baa3f-4bc3-4915-b60d-c8c5dae11a11, sni: jgwhdlb3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.03MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
   - {name: 🇺🇸 美国-4.28MB/s(Youtube:不良林), server: fhcarm1.gaox.ml, port: 443, type: trojan, password: 05742120-ce23-4cc8-88f5-6d221ce45bf4, sni: fhcarm1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-2.60MB/s(Youtube:不良林), server: 104.128.190.115, port: 44771, type: vmess, uuid: a4aa83d4-db1c-42a6-844d-135d6635b463, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-219.0KB/s(Youtube:不良林), server: 104.128.190.115, port: 44771, type: vmess, uuid: a4aa83d4-db1c-42a6-844d-135d6635b463, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 波兰-208.5KB/s(Youtube:不良林)
-      - 乌克兰-3.19MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.79MB/s(Youtube:不良林)
-      - 波兰-659.8KB/s(Youtube:不良林)
-      - 波兰-935.5KB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.68MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.25MB/s(Youtube:不良林)
+      - 波兰-1.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-340.1KB/s(Youtube:不良林)
+      - 波兰-513.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-281.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.22MB/s(Youtube:不良林)
       - 🇮🇳 印度-613.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.28MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.60MB/s(Youtube:不良林)
+      - 🇬🇧 英国-219.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 波兰-208.5KB/s(Youtube:不良林)
-      - 乌克兰-3.19MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.79MB/s(Youtube:不良林)
-      - 波兰-659.8KB/s(Youtube:不良林)
-      - 波兰-935.5KB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.68MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.25MB/s(Youtube:不良林)
+      - 波兰-1.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-340.1KB/s(Youtube:不良林)
+      - 波兰-513.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-281.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.22MB/s(Youtube:不良林)
       - 🇮🇳 印度-613.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.28MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.60MB/s(Youtube:不良林)
+      - 🇬🇧 英国-219.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 波兰-208.5KB/s(Youtube:不良林)
-      - 乌克兰-3.19MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.79MB/s(Youtube:不良林)
-      - 波兰-659.8KB/s(Youtube:不良林)
-      - 波兰-935.5KB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.68MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.25MB/s(Youtube:不良林)
+      - 波兰-1.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-340.1KB/s(Youtube:不良林)
+      - 波兰-513.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-281.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.22MB/s(Youtube:不良林)
       - 🇮🇳 印度-613.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.28MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.60MB/s(Youtube:不良林)
+      - 🇬🇧 英国-219.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 波兰-208.5KB/s(Youtube:不良林)
-      - 乌克兰-3.19MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.79MB/s(Youtube:不良林)
-      - 波兰-659.8KB/s(Youtube:不良林)
-      - 波兰-935.5KB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.68MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.25MB/s(Youtube:不良林)
+      - 波兰-1.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-340.1KB/s(Youtube:不良林)
+      - 波兰-513.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-281.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.22MB/s(Youtube:不良林)
       - 🇮🇳 印度-613.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.28MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.60MB/s(Youtube:不良林)
+      - 🇬🇧 英国-219.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 波兰-208.5KB/s(Youtube:不良林)
-      - 乌克兰-3.19MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.79MB/s(Youtube:不良林)
-      - 波兰-659.8KB/s(Youtube:不良林)
-      - 波兰-935.5KB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.68MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.25MB/s(Youtube:不良林)
+      - 波兰-1.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-340.1KB/s(Youtube:不良林)
+      - 波兰-513.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-281.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.22MB/s(Youtube:不良林)
       - 🇮🇳 印度-613.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.28MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.60MB/s(Youtube:不良林)
+      - 🇬🇧 英国-219.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 波兰-208.5KB/s(Youtube:不良林)
-      - 乌克兰-3.19MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.79MB/s(Youtube:不良林)
-      - 波兰-659.8KB/s(Youtube:不良林)
-      - 波兰-935.5KB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.68MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.25MB/s(Youtube:不良林)
+      - 波兰-1.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-340.1KB/s(Youtube:不良林)
+      - 波兰-513.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-281.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.22MB/s(Youtube:不良林)
       - 🇮🇳 印度-613.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.28MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.60MB/s(Youtube:不良林)
+      - 🇬🇧 英国-219.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 波兰-208.5KB/s(Youtube:不良林)
-      - 乌克兰-3.19MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.79MB/s(Youtube:不良林)
-      - 波兰-659.8KB/s(Youtube:不良林)
-      - 波兰-935.5KB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.68MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.25MB/s(Youtube:不良林)
+      - 波兰-1.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-340.1KB/s(Youtube:不良林)
+      - 波兰-513.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-281.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.22MB/s(Youtube:不良林)
       - 🇮🇳 印度-613.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.28MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.60MB/s(Youtube:不良林)
+      - 🇬🇧 英国-219.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
